[package]
name = "embedIDS"
version = "0.1.0"
edition = "2018"

[dependencies]
pnet = "3.25.0"
pnet_macros_support = { version = "*", default-features = false }
rumqttc = { version = "0.10.0", default-features = false }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
